--- a/src/components/MovieDetailsPage/MovieDetailsPage.scss
+++ b/src/components/MovieDetailsPage/MovieDetailsPage.scss
@@ -1,23 +1,42 @@
-.movie-detail-item {
-    display: flex;
-    flex-direction: row;
-}
-.movie-description {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    text-align: left;
-    p {
+.movie-detail-list {
+    margin: 0;
+    padding: 30px 0;
+    .movie-detail-item {
         display: flex;
         flex-direction: row;
+        &__image {
+            margin-right: 30px;
+        }
     }
-    &__genre {
+    .movie-description {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        text-align: left;
+        p {
+            display: flex;
+            flex-direction: row;
+        }
+        &__genre {
+            font-size: 20px;
+        }
+        &__genre:not(:last-child) {
+            margin-right: 10px;
+        }
+        &__overview {
+            font-size: 18px;
+        }
+    }
+}
+.about-links {
+    display: flex;
+    flex-direction: row;
+    &__item {
+        transition: linear 300ms;
         font-size: 20px;
+        margin-right: 15px;
     }
-    &__genre:not(:last-child) {
-        margin-right: 10px;
-    }
-    &__overview {
-        font-size: 18px;
+    &__item:hover {
+        color: tomato;
     }
 }
