--- a/src/components/MovieDetailsPage/MovieDetailsPage.scss
+++ b/src/components/MovieDetailsPage/MovieDetailsPage.scss
@@ -5,6 +5,7 @@
         display: flex;
         flex-direction: row;
         &__image {
+            object-fit: contain;
             margin-right: 30px;
         }
     }
